# bicron

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md
doc/: example.json
src/: bicron.cc  bicron.h  config.cc  config.h  main.cc  rule.cc  rule.h  time_point.cc  time_point.h  unit.h
src/bicron/: bicron.cc  bicron.h  config.cc  config.h  json_config_builder.cc  json_config_builder.h  rule.cc  rule.h  time_point.cc  time_point.h  unit.h
tests/: bicron_test.cc  dummy_test.cc  json_config_test.cc  rule_test.cc  time_point_test.cc
